# mgstringref

./: CMakeLists.txt  README.md  mgstringref-config-version.cmake  mgstringref-config.cmake  mgstringref.h
tests/: CMakeLists.txt  mgstringref_test.cpp  mgstringref_test.h  mgstringref_test_assign.cpp  mgstringref_test_comparison.cpp  mgstringref_test_constructors.cpp  mgstringref_test_main.cpp
